ft(backend): Create thumbnail [Finishes #168673533]
